classDiagram
    class geiger_counter {
        +onEnable() void
        +onDisable() void
    }

    class GeigerManager {
        -geiger_counter instance
        -JavaPlugin plugin
        -GeigerConfiguration configuration
        -GeigerValidator validator
        -ParticleRenderer particleRenderer
        -SourceHandler sourceHandler
        -ItemAPI api
        +getInstance(plugin: JavaPlugin) GeigerManager
        +getInstance() GeigerManager
        +initialize() void
        -startPlayerCheckTask() void
        -checkAllPlayers() void
        -handlePlayerWithGeiger(player: Player, source: Location) void
        -calculateHorizontalDistance(from: Location, to: Location) double
    }

    class GeigerConfiguration {
        -JavaPlugin plugin
        -World world
        -double minX, maxX, minZ, maxZ
        -double collectionDistance
        -double maxDetectionDistance
        -double closeRangeThreshold
        -double threeRingsDistance
        -double twoRingsDistance
        -String messageFoundSource
        -String messageDeadGeiger
        -ColorConfig closeRangeStartColor
        -ColorConfig closeRangeEndColor
        -ColorConfig farRangeStartColor
        -ColorConfig farRangeEndColor
        -List~TierReward~ tierRewards
        +GeigerConfiguration(plugin: JavaPlugin)
        +load() void
        -loadWorld() void
        -loadSearchArea() void
        -loadDetectionSettings() void
        -loadColorSettings() void
        -loadMessages() void
        -loadRewards() void
        +getWorld() World
        +getMinX() double
        +getMaxX() double
        +getMinZ() double
        +getMaxZ() double
        +getCollectionDistance() double
        +getMaxDetectionDistance() double
        +getCloseRangeThreshold() double
        +getTierRewards() List~TierReward~
    }

    class GeigerValidator {
        -JavaPlugin plugin
        -ItemAPI api
        +GeigerValidator(plugin: JavaPlugin, api: ItemAPI)
        +isGeigerCounter(item: ItemStack) boolean
    }

    class ParticleRenderer {
        -GeigerConfiguration config
        +ParticleRenderer(config: GeigerConfiguration)
        +showParticleEffect(player: Player, distance: double) void
        -calculateParticleConfig(distance: double) ParticleConfig
        -calculateCloseRangeParticles(distance: double) ParticleConfig
        -calculateFarRangeParticles(distance: double) ParticleConfig
        -interpolateColor(start: int, end: int, progress: double) int
        -calculateRingCount(distance: double) int
        -spawnParticleRings(player: Player, config: ParticleConfig) void
        -spawnSingleRing(player: Player, center: Location, dust: DustOptions, ringIndex: int) void
    }

    class SourceHandler {
        -JavaPlugin plugin
        -GeigerConfiguration config
        -ItemAPI api
        -Random random
        -Location sourceLocation
        +SourceHandler(plugin: JavaPlugin, config: GeigerConfiguration, api: ItemAPI)
        +getSourceLocation() Location
        +moveSourceToRandomLocation() void
        +tryCollectSource(player: Player, distance: double) void
        -collectSource(player: Player) void
        -notifyPlayerOfCollection(player: Player) void
        -replaceGeigerWithDeadVersion(player: Player) void
        -giveReward(player: Player) void
        -selectRandomTier(tiers: List~TierReward~) TierReward
        -giveRewardItem(player: Player, reward: ItemReward, tierName: String) void
    }

    class TierReward {
        -String tierName
        -double weight
        -List~ItemReward~ items
        +TierReward(tierName: String, weight: double)
        +addItem(item: ItemReward) void
        +getTierName() String
        +getWeight() double
        +getItems() List~ItemReward~
        +isEmpty() boolean
    }

    class ItemReward {
        -String outputItem
        -int outputAmount
        +ItemReward(outputItem: String, outputAmount: int)
        +getOutputItem() String
        +getOutputAmount() int
    }

    geiger_counter "1" --> "1" GeigerManager : initializes
    
    GeigerManager "1" --> "1" GeigerConfiguration : creates
    GeigerManager "1" --> "1" GeigerValidator : creates
    GeigerManager "1" --> "1" ParticleRenderer : creates
    GeigerManager "1" --> "1" SourceHandler : creates
    GeigerManager "1" --> "1" ItemAPI : uses
    
    GeigerValidator "1" --> "1" ItemAPI : uses
    
    ParticleRenderer "1" --> "1" GeigerConfiguration : uses
    
    SourceHandler "1" --> "1" GeigerConfiguration : uses
    SourceHandler "1" --> "1" ItemAPI : uses
    
    GeigerConfiguration "1" --> "*" TierReward : contains
    TierReward "1" --> "*" ItemReward : contains
